# messenger

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/v1/: auth.py  chats.py  groups.py  messages.py  messenger.py  test.py  users.py  views.py
app/: main.py
app/templates/: chat.html  chats.html  group.html  home.html  login.html  messenger.html  register.html
core/: config.py  constants.py  exceptions.py  logger.py  security.py  websocket_manager.py
core/db/: db.py
core/middleware/: logging_middleware.py
migrations/: env.py
migrations/versions/: 09a038d3ba15_add_message_group_model.py  655671f3b81a_add_message_reads_table.py  9a2b00ef9b66_initial_migration.py
models/: __init__.py  chat.py  group.py  message.py  user.py
schemas/: auth.py  chat.py  group.py  message.py  user.py
services/: auth_service.py  chat_service.py  group_service.py  message_service.py  user_service.py
static/css/: chat.css  group.css  home.css  login.css  messenger.css  register.css
