[tool.poetry]
name = "messenger"
version = "0.1.0"
description = "Messenger"
authors = ["Andrey Yashinin <dron8052@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
